manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: get-tasks-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: get-tasks
  template:
    metadata:
      name: template-pod
      labels:
        app: get-tasks
    spec:
      containers:
      - name: get-tasks-container
        image: todoacr001.azurecr.io/gettask:v8
        ports:
        - containerPort: 8000
