manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: configure-ingress-gettask
  labels:
    app.kubernetes.io/name: myingress
spec:
  ingressClassName: nginx
  rules:
  - host: get-task.kulphi.shop
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: get-task-service #service name mean Loadbalancer service ka naam, yha cluster ip type LB ko add kar rahe
            port: 
              number: 80 #service ka portnumber
